--- a/apps/pdfexport/templates/pdfexport/finalreport.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport.html
@@ -12,11 +12,24 @@
 
     <!-- Title Page -->
     <div class="title-page" style="page: cover;">
-        <div>
-            <img src="{% static 'images/logo.svg' %}" alt="Team AssessMVP Logo" class="title-logo"/>
+        <div class="title-top">
+            <div class="title-model">
+                <img src="{% static 'images/small-icon.png' %}" alt="Model"/>
+            </div>
+            <h1 class="report-title">AssessMVP Report</h1>
+            <p class="team-name">{{ team_name }}</p>
+            <p class="report-date">{{ deadline|date:"F Y" }}</p>
         </div>
-        <h1>AssessMVP Report</h1>
-        <p class="report-date">{{ team_name }} – {{ deadline|date:"F Y" }}</p>
+
+        <div class="title-bottom">
+            <div class="title-logo">
+                <img src="{% static 'images/logo.svg' %}" alt="Team AssessMVP Logo"/>
+            </div>
+            <div class="title-company-info">
+                <p>www.websitehere.com</p>
+                <p>Copyright 2025</p>
+            </div>
+        </div>
     </div>
 
     <div class="page-break"></div>
@@ -179,7 +192,74 @@
     <!-- Action Ideas -->
     <section class="action-ideas">
         <h1>Action Ideas</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at nisl vel nisi laoreet bibendum.</p>
+        <h3>Collaborative Culture</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Ideas:</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Leadership Accountability</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Ideas:</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Strategic Momentum</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Ideas:</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Talent Magnetism</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Ideas:</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 
     <div class="page-break"></div>
@@ -187,7 +267,74 @@
     <!-- Team Commitments -->
     <section class="team-commitments">
         <h1>Team Commitments</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis viverra, metus id volutpat tincidunt, sapien felis convallis lorem, eget tincidunt magna leo nec est.</p>
+        <h3>Collaborative Culture</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Commitment(s):</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Leadership Accountability</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Commitment(s):</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Strategic Momentum</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Commitment(s):</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Talent Magnetism</h3>
+        <table class="action-table">
+            <thead>
+                <tr>
+                <th>Action Commitment(s):</th>
+                <th>Complete By:</th>
+                <th>Assigned To:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 
 </body>
