--- a/apps/pdfexport/templates/pdfexport/finalreport.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport.html
@@ -16,14 +16,14 @@
             <div class="title-model">
                 <img src="{% static 'images/small-icon.png' %}" alt="Model"/>
             </div>
-            <h1 class="report-title">AssessMVP Report</h1>
+            <h1 class="report-title">Ascent Assessment Report</h1>
             <p class="team-name">{{ team_name }}</p>
             <p class="report-date">{{ deadline|date:"F Y" }}</p>
         </div>
 
         <div class="title-bottom">
             <div class="title-logo">
-                <img src="{% static 'images/logo.svg' %}" alt="Team AssessMVP Logo"/>
+                <img src="{% static 'images/logo.svg' %}" alt="Ascent Assessment Logo"/>
             </div>
             <div class="title-company-info">
                 <p>www.websitehere.com</p>
