--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Sign In | Team AssessMVP{% endblock %}</title>
+    <title>{% block title %}Sign In | Ascent Assessment{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="auth-container">
         <div class="auth-box">
             <div class="auth-logo">
-                <img src="{% static 'images/logo.svg' %}" alt="Team AssessMVP logo">
+                <img src="{% static 'images/logo.svg' %}" alt="Ascent Assessment Logo">
             </div>
             {% block content %}{% endblock %}
         </div>
