--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -3,7 +3,7 @@
 <aside class="sidebar">
   <div class="sidebar-header">
     <a href="{% url 'dashboard_home' %}">
-      <img src="{% static 'images/logo.svg' %}" alt="Team AssessMVP Logo" class="sidebar-logo" />
+      <img src="{% static 'images/logo.svg' %}" alt="Ascent Assessment Logo" class="sidebar-logo" />
       </a>
     </div>
 
