Adjust logos and dimensions

--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-box">
             <div class="auth-logo">
-                <img src="{% static 'images/logo.svg' %}" alt="Ascent Assessment Logo">
+                <img src="{% static 'images/logo-square.png' %}" alt="Ascent Assessment Logo">
             </div>
             {% block content %}{% endblock %}
         </div>
