--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Sign In | Ascent Assessment{% endblock %}</title>
+    <title>{% block title %}Account Sign In | Ascent Assessment{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
