Add Account Settings page and functions

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -18,7 +18,7 @@
 
     <p class="nav-section">OTHER</p>
     <ul>
-      <li><a href="#" class="nav-link">Account</a></li>
+      <li><a href="{% url 'accounts:account_settings' %}">Account</a></li>
     </ul>
   </nav>
 </aside>
