--- a/static/css/style.css
+++ b/static/css/style.css
@@ -320,6 +320,7 @@ input[type="range"] {
   padding: 0;
 }
 
+
 /* Set the cursor to '?' on an abbreviation and style the 
 abbreviation to show that there is more information underneath */
 abbr[title] {
@@ -566,6 +567,16 @@ input[type="file"] {
   max-width: 240px;
   height: auto;
 }
+
+
+/* All forms */
+
+.helptext {
+  font-size: 0.875rem;
+  color: var(--text-light);
+  line-height: 1.5rem;
+}
+
 
 /* Misc body elements */
 hr {
