Add context processor, icons to sidebar, nav link styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
   <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
+  <script src="https://unpkg.com/lucide@latest"></script> <!--Lucide for Icons-->
 </head>
 <body class="dashboard-page">
   <div class="page-wrapper">
@@ -23,5 +24,8 @@
     </div>
     
   </div>
+  <script> 
+    lucide.createIcons();
+  </script>
 </body>
 </html>
